# agent-lighthouse

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  make_favicon.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/webaudit/: __init__.py  __main__.py  app.py  auditor.py
src/webaudit/static/css/: style.css
src/webaudit/static/js/: app.js  icons.js  particles.js
src/webaudit/templates/: 404.html  base.html
src/webaudit/templates/partials/: footer.html  header.html  icons.html  score-panel.html
