[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lighthouse"
version = "0.2.0"
description = "AI & Agent Readiness Scanner — evaluate any website for AI agent compatibility"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "PHRIXUS"}]
keywords = ["ai", "agent", "readiness", "scanner", "seo", "structured-data", "llm", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "flask>=3.0",
    "flask-compress>=1.14",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
agentlighthouse = "webaudit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
